chore(make): use existing kubebuilder installation
- Make kubebuilder assets configurable using the KUBEBUILDER_ASSETS
  environment variable
- Remove automatic kubebuilder installation
- Throw make error if any kubebuilder assets are missing

Upstream-repository: operator-lifecycle-manager
Upstream-commit: 016764064433ce3e1c4dad8b0de4fe396a622028

--- a/staging/operator-lifecycle-manager/Makefile
+++ b/staging/operator-lifecycle-manager/Makefile
@@ -11,8 +11,6 @@ endif
 SHELL := /bin/bash
 ORG := github.com/operator-framework
 PKG   := $(ORG)/operator-lifecycle-manager
-OS := $(shell go env GOOS)
-ARCH := $(shell go env GOARCH)
 MOD_FLAGS := $(shell (go version | grep -q -E "1\.1[1-9]") && echo -mod=vendor)
 CMDS  := $(shell go list $(MOD_FLAGS) ./cmd/...)
 TCMDS := $(shell go list $(MOD_FLAGS) ./test/e2e/...)
@@ -25,6 +23,7 @@ LOCAL_NAMESPACE := "olm"
 export GO111MODULE=on
 CONTROLLER_GEN := go run $(MOD_FLAGS) ./vendor/sigs.k8s.io/controller-tools/cmd/controller-gen
 YQ_INTERNAL := go run $(MOD_FLAGS) ./vendor/github.com/mikefarah/yq/v2/
+KUBEBUILDER_ASSETS ?= /usr/local/kubebuilder/bin
 
 # ART builds are performed in dist-git, with content (but not commits) copied 
 # from the source repo. Thus at build time if your code is inspecting the local
@@ -36,21 +35,27 @@ YQ_INTERNAL := go run $(MOD_FLAGS) ./vendor/github.com/mikefarah/yq/v2/
 GIT_COMMIT := $(if $(SOURCE_GIT_COMMIT),$(SOURCE_GIT_COMMIT),$(shell git rev-parse HEAD))
 
 .PHONY: build test run clean vendor schema-check \
-	vendor-update coverage coverage-html e2e .FORCE
+	vendor-update coverage coverage-html e2e \
+	kubebuilder .FORCE
 
 all: test build
 
 test: clean cover.out
 
 unit: kubebuilder
-	$(KUBEBUILDER_ENV) go test $(MOD_FLAGS) $(SPECIFIC_UNIT_TEST) -v -race -count=1 ./pkg/...
+	KUBEBUILDER_ASSETS=$(KUBEBUILDER_ASSETS) go test $(MOD_FLAGS) $(SPECIFIC_UNIT_TEST) -v -race -count=1 ./pkg/...
 
-# Install kubebuilder if not found
-KUBEBUILDER_DIR := /tmp/kubebuilder_2.3.1_$(OS)_$(ARCH)/bin 
+# Ensure kubebuilder is installed before continuing
+KUBEBUILDER_ASSETS_ERR := not detected in $(KUBEBUILDER_ASSETS), to override the assets path set the KUBEBUILDER_ASSETS environment variable, for install instructions see https://book.kubebuilder.io/quick-start.html
 kubebuilder:
-ifeq (, $(shell which kubebuilder))
-	[ ! -d "$(KUBEBUILDER_DIR)" ] && (curl -sL https://go.kubebuilder.io/dl/2.3.1/$(OS)/$(ARCH) | tar -xz -C /tmp/)
-KUBEBUILDER_ENV := KUBEBUILDER_ASSETS=$(KUBEBUILDER_DIR)
+ifeq (, $(wildcard $(KUBEBUILDER_ASSETS)/kubebuilder))
+	$(error kubebuilder $(KUBEBUILDER_ASSETS_ERR))
+endif
+ifeq (, $(wildcard $(KUBEBUILDER_ASSETS)/etcd))
+	$(error etcd $(KUBEBUILDER_ASSETS_ERR))
+endif
+ifeq (, $(wildcard $(KUBEBUILDER_ASSETS)/kube-apiserver))
+	$(error kube-apiserver $(KUBEBUILDER_ASSETS_ERR))
 endif
 
 schema-check:
