--- a/staging/operator-lifecycle-manager/.github/workflows/test-scripts.yml
+++ b/staging/operator-lifecycle-manager/.github/workflows/test-scripts.yml
@@ -1,12 +1,24 @@
-name: test-scripts
+name: upstream-tests
 on:
   pull_request:
     paths:
-    - 'scripts/**'
-    - 'Makefile'
+    - '**'
+    - '!doc/contributors/**'
+    - '!doc/design/**'
   schedule:
   - cron: '0 0 * * *' # daily to pick up releases
 jobs:
+  image-build:
+    runs-on: ubuntu-latest
+    steps: 
+    - name: Check out the repo
+      uses: actions/checkout@v2
+    - name: Build the container image
+      uses: docker/build-push-action@v1
+      with:
+        repository: operator-framework/olm
+        dockerfile: ./upstream.Dockerfile
+        push: false
   run-local-minikube:
     runs-on: ubuntu-latest
     steps:
