chore(gh-actions): install conntrack before minikube
Upstream-repository: operator-lifecycle-manager
Upstream-commit: e29e0a1adad4e5526d78e445f0680d3253224219

--- a/staging/operator-lifecycle-manager/.github/workflows/test-scripts.yml
+++ b/staging/operator-lifecycle-manager/.github/workflows/test-scripts.yml
@@ -24,6 +24,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: |
+        sudo apt-get install conntrack
         curl -sLo minikube "$(curl -sL https://api.github.com/repos/kubernetes/minikube/releases/latest | jq -r '[.assets[] | select(.name == "minikube-linux-amd64")] | first | .browser_download_url')"
         chmod +x minikube
         sudo mv minikube /bin/
