feat: add uninstall
Upstream-repository: operator-lifecycle-manager
Upstream-commit: e7052324a7d58c004f0376a0a86bc0a9128b3209

--- a/staging/operator-lifecycle-manager/Makefile
+++ b/staging/operator-lifecycle-manager/Makefile
@@ -108,14 +108,6 @@ build: clean $(CMDS)
 $(TCMDS):
 	go test -c $(BUILD_TAGS) $(MOD_FLAGS) -o bin/$(shell basename $@) $@
 
-run-local: build-linux build-wait build-util-linux
-	rm -rf build
-	. ./scripts/build_local.sh
-	mkdir -p build/resources
-	. ./scripts/package_release.sh 1.0.0 build/resources doc/install/local-values.yaml
-	. ./scripts/install_local.sh $(LOCAL_NAMESPACE) build/resources
-	rm -rf build
-
 deploy-local:
 	mkdir -p build/resources
 	. ./scripts/package_release.sh 1.0.0 build/resources doc/install/local-values.yaml
@@ -227,8 +219,40 @@ ifeq ($(quickstart), true)
 	./scripts/package_quickstart.sh deploy/$(target)/manifests/$(ver) deploy/$(target)/quickstart/olm.yaml deploy/$(target)/quickstart/crds.yaml deploy/$(target)/quickstart/install.sh
 endif
 
+################################
+#  OLM - Install/Uninstall/Run #
+################################
+
 .PHONY: run-console-local
 run-console-local:
 	@echo Running script to run the OLM console locally:
 	. ./scripts/run_console_local.sh
 
+.PHONY: uninstall
+uninstall:
+	@echo Uninstalling OLM:
+	- kubectl delete -f deploy/upstream/quickstart/crds.yaml
+	- kubectl delete -f deploy/upstream/quickstart/olm.yam
+	- kubectl delete catalogsources.operators.coreos.com
+	- kubectl delete clusterserviceversions.operators.coreos.com
+	- kubectl delete installplans.operators.coreos.com
+	- kubectl delete operatorgroups.operators.coreos.com subscriptions.operators.coreos.com
+	- kubectl delete apiservices.apiregistration.k8s.io v1.packages.operators.coreos.com
+	- kubectl delete ns olm
+	- kubectl delete ns openshift-operator-lifecycle-manager
+	- kubectl delete ns openshift-operators
+	- kubectl delete ns operators
+	- kubectl delete clusterrole.rbac.authorization.k8s.io/aggregate-olm-edit
+	- kubectl delete clusterrole.rbac.authorization.k8s.io/aggregate-olm-view
+	- kubectl delete clusterrole.rbac.authorization.k8s.io/system:controller:operator-lifecycle-manager
+	- kubectl delete clusterroles.rbac.authorization.k8s.io "system:controller:operator-lifecycle-manager"
+	- kubectl delete clusterrolebindings.rbac.authorization.k8s.io "olm-operator-binding-openshift-operator-lifecycle-manager"
+
+.PHONY: run-local
+run-local: build-linux build-wait build-util-linux
+	rm -rf build
+	. ./scripts/build_local.sh
+	mkdir -p build/resources
+	. ./scripts/package_release.sh 1.0.0 build/resources doc/install/local-values.yaml
+	. ./scripts/install_local.sh $(LOCAL_NAMESPACE) build/resources
+	rm -rf build
