Update CSV Validation
This commit updates the CRD validation to only accept CSVs where the
WebhookDefinition type is valid.

Upstream-repository: api
Upstream-commit: 19a9724107f19ea8308c048f6945e53cb6ffd05a

--- a/staging/api/crds/operators.coreos.com_clusterserviceversions.yaml
+++ b/staging/api/crds/operators.coreos.com_clusterserviceversions.yaml
@@ -8821,6 +8821,9 @@ spec:
                       description: WebhookAdmissionType is the type of admission webhooks
                         supported by OLM
                       type: string
+                      enum:
+                      - ValidatingAdmissionWebhook
+                      - MutatingAdmissionWebhook
                     webhookPath:
                       type: string
           status:
